--- a/work.html
+++ b/work.html
@@ -72,52 +72,37 @@
     <h2 class="sm-heading">
       Check out some of my projects...
     </h2>
-    <div class="projects">
-      <div class="item">
-        <a href="img/projects/project1.jpg">
-          <img src="img/projects/project1.jpg" alt="Project">
-        </a>
-        <a href="#" class="btn-light">
-          <i class="fas fa-eye"></i> Enactus Website
-        </a>
-      </div>
+   <div class="projects">
+      
       <div class="item">
         <a href="img/projects/project2.jpg">
           <img src="img/projects/project2.jpg" alt="Project">
         </a>
         <a href="#" class="btn-light">
-          <i class="fas fa-eye"></i> Portfolio
+          <i class="fas fa-eye"></i> Portfolio Template v 1.0 | HTML5/CSS3
         </a>
       </div>
-      <div class="item">
-        <a href="img/projects/project3.jpg">
-          <img src="img/projects/project3.jpg" alt="Project">
-        </a>
-        <a href="#" class="btn-light">
-          <i class="fas fa-eye"></i> E-commerce Website
-        </a>
-        </div>
-      <div class="item">
-        <a href="img/projects/project4.jpg">
-          <img src="img/projects/project4.jpg" alt="Project">
-        </a>
-        <a href="#" class="btn-light">
-          <i class="fas fa-eye"></i> Chatting Website
-        </a>
-        </div>
-      <div class="item">
-        <a href="img/projects/project5.jpg">
-          <img src="img/projects/project5.jpg" alt="Project">
-        </a>
-        <a href="#" class="btn-light">
-          <i class="fas fa-eye"></i> My 1st logo
-        </a></div>
+      
 		<div class="item">
         <a href="img/projects/project6.jpg">
           <img src="img/projects/project6.jpg" alt="Project">
         </a>
         <a href="#" class="btn-light">
-          <i class="fas fa-eye"></i>  My second logo
+          <i class="fas fa-eye"></i>  Personnal Logo v1.0 | Adobe Illustrator
+        </a></div>
+		  <div class="item">
+        <a href="img/projects/project5.jpg">
+          <img src="img/projects/project5.jpg" alt="Project">
+        </a>
+        <a href="#" class="btn-light">
+          <i class="fas fa-eye"></i> Personnal Logo v2.0 | Adobe Illustrator
+        </a></div>
+		<div class="item">
+        <a href="img/projects/resumee.jpeg">
+          <img src="img/projects/resumee.jpeg" alt="Project">
+        </a>
+        <a href="#" class="btn-light">
+          <i class="fas fa-eye"></i>  Dynamic Resume | PHP/MySql                                    
         </a></div>
     </div>
   </main>
